# AMidiOrganOrg

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  AMidiButtons.h  AMidiControl.h  AMidiDevices.h  AMidiHotkeys.h  AMidiInstruments.h  AMidiRotors.h  AMidiUtils.h  CMakeLists.txt  DemoUtilities.h  MacMinibuild.md  Main.cpp  README.md  TECHNICAL_OVERVIEW.md  USER_MANUAL.md  gitcommands.md  todo.md
.github/workflows/: ci.yml  release.yml
assets/: help.md
build-release-local/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-release-local/AMidiOrganTests_artefacts/JuceLibraryCode/: Info.txt
build-release-local/AMidiOrgan_artefacts/JuceLibraryCode/: Info.txt
build-release-local/JUCE/: JUCEExportConfig.cmake  Makefile  cmake_install.cmake
build-release-local/JUCE/modules/: Makefile  cmake_install.cmake
build-release-local/JUCE/tools/: CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  Makefile  cmake_install.cmake
build-release-local/JUCE/tools/modules/: Makefile  cmake_install.cmake
build-release-local/juce_binarydata_AMidiOrganBinaryData/JuceLibraryCode/: BinaryData.h  BinaryData1.cpp  BinaryData2.cpp  BinaryData6.cpp  input_file_list
docs/: hotkeys-shortcuts-plan.md  release-smoke-checklist.md
docs/configs/: deebach-integra.cfg  deebach-organ.cfg  instrument_modules.json  integra.cfg  midi_sysex_routes.json
docs/instruments/: at900mi.json  ketronevm.json
docs/midi/: AWhiterShadeofPale.mid  amtest.mid
docs/panels/: masterinstrument.pnl
midi_file_player/: MidiFilePlaybackEngine.h  MidiFilePlayerSettings.h  PlayerMidiIdentity.h  PlayerProfilesManageDialog.h  PlayerSongProfile.h  PlayerSongProfileStore.h  PlayerStripCcMerge.h  ProgramChangeRemapper.h
scripts/: bootstrap_macos.sh  launch-debug-app.sh  mac-bootstrap.sh  mac-build.sh  package-macos.sh  package-windows.ps1
tests/: test_main.cpp
tools/: generate_amtest_midi.py
